--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,12 +3,18 @@
 
     <string name="app_name">RecorridasZO</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>    
-    
-    <!-- Mapa activity -->  
-    <string name="button_buscar">Buscar</string>        
+    <string name="hello_world">Hello world!</string>
+
+    <!-- Mapa activity -->
+    <string name="button_buscar">Buscar</string>
     <string name="button_confirmar">OK</string>
     <string name="direccion">Direccion</string>
     <string name="mapa">Mapa</string>
+    <string name="title_activity_formulario">FormularioActivity</string>
+    <string name="title_activity_formulario_fragment">FormularioFragment</string>
+    <string name="boton_ok">OK</string>
+    <string name="nombre">Nombre</string>
+    <string name="apellido">Apellido</string>
+    <string name="comentario">Comentario</string>
 
 </resources>
