--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
 
     <!-- Mapa activity -->
     <string name="button_buscar">Buscar</string>
-    <string name="button_confirmar">OK</string>
+    <string name="button_confirmar">Guardar</string>
     <string name="direccion">Direccion</string>
     <string name="mapa">Mapa</string>
 
@@ -21,5 +21,6 @@
     <string name="comentario">Comentario</string>
     
     <string name="editar">Editar</string>
+    <string name="eliminar">Eliminar</string>
 
 </resources>
