--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,18 +10,22 @@
     <string name="button_confirmar">Guardar</string>
     <string name="direccion">Direccion</string>
     <string name="mapa">Mapa</string>
-
     <string name="title_activity_ver_persona">VerPersona</string>
-
     <string name="title_activity_formulario">FormularioActivity</string>
     <string name="title_activity_formulario_fragment">FormularioFragment</string>
     <string name="boton_ok">OK</string>
-    <string name="labelNombre">Nombre: </string>
+    <string name="labelNombre">Nombre:</string>
     <string name="nombre">Nombre</string>
+    <string name="labelApellido">Apellido:</string>
     <string name="apellido">Apellido</string>
+    <string name="labelDireccion">Dirección:</string>
+    <string name="direccion">Dirección</string>
+    <string name="labelZona">Zona:</string>
+    <string name="zona">Zona</string>
+    <string name="labelDescripcion">Descripción:</string>
+    <string name="descripcion">Descripción</string>
     <string name="comentario">Comentario</string>
     <string name="sinDato">Sin Dato</string>
-    
     <string name="editar">Editar</string>
     <string name="eliminar">Eliminar</string>
 
