Servidor de prueba

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,5 +29,5 @@
     <string name="eliminar">Eliminar</string>
     <string name="servicio_no_disponible">Servicio no disponible</string>
     <string name="direccion_invalida">Dirección Inválida</string>
-    <string name="error_coneccion">Error de conección</string>
+    <string name="error_conexion">Error de conexión</string>
 </resources>
