correccion de codigo

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="BorrarDBLocal">Borrar DBLocal</string>
     <string name="RefrescarPantalla">Refrescar Pantalla</string>
     <string name="dispositivo_no_soportado">Dispositivo no soportado</string>
+    <string name="subida_correcta">Subida correcta</string>
 </resources>
